@@ -3,7 +3,7 @@ use Test::Most;
 my $os = lc $^O;
 
 plan skip_all $os
-    if $os !~ /^(darwin|(free|net|open)bsd|linux|solaris|sunos)$/;
+    if $os !~ /^(darwin|dragonfly|(free|net|open)bsd|linux|solaris|sunos)$/;
 
 use_ok 'Sys::CpuLoad', 'getloadavg';
 
