@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Support getloadavg for DragonFly BSD.
 
 0.22      2020-03-27 12:51:39+00:00 Europe/London (TRIAL RELEASE)
   [Enhancements]
